--- a/dorg-catcher/server/grails-app/conf/application.yml
+++ b/dorg-catcher/server/grails-app/conf/application.yml
@@ -110,3 +110,9 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+#tag::grailsResourcesPattern[]
+grails:
+    resources:
+        pattern: /**
+#end::grailsResourcesPattern[]
