--- a/dorg-catcher/client/angular.json
+++ b/dorg-catcher/client/angular.json
@@ -24,9 +24,16 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/@swimlane/ngx-datatable/release/themes/material.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+                        "../client/node_modules/jquery/dist/jquery.min.js",
+                        "../client/node_modules/bootstrap/dist/js/bootstrap.js",
+                        "../client/node_modules/bootstrap/dist/js/bootstrap.min.js",
+                        "../client/node_modules/jquery/dist/jquery.js"
+                        ]
           },
           "configurations": {
             "production": {
