--- a/dorg-catcher/client/package.json
+++ b/dorg-catcher/client/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "3.3.0",
-    "bootstrap": "4.1.3",
+    "@swimlane/ngx-datatable": "^15.0.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
