--- a/dorg-catcher/client/package.json
+++ b/dorg-catcher/client/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@fortawesome/angular-fontawesome": "0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@ng-bootstrap/ng-bootstrap": "3.3.0",
-    "@swimlane/ngx-datatable": "^15.0.2",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "4.1.3",
     "core-js": "^2.5.4",
-    "jquery": "^3.4.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
