--- a/dorg-catcher/client/package.json
+++ b/dorg-catcher/client/package.json
@@ -24,8 +24,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@ng-bootstrap/ng-bootstrap": "3.3.0",
-    "bootstrap": "4.1.3",
+    "@swimlane/ngx-datatable": "^15.0.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
