--- a/dorg-catcher/client/package.json
+++ b/dorg-catcher/client/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "3.3.0",
     "@swimlane/ngx-datatable": "^15.0.2",
     "bootstrap": "^4.1.3",
+    "angular-split": "^3.0.2",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "rxjs": "~6.2.0",
