--- a/dorg-catcher/client/package.json
+++ b/dorg-catcher/client/package.json
@@ -24,9 +24,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@ng-bootstrap/ng-bootstrap": "3.3.0",
-    "@swimlane/ngx-datatable": "^15.0.2",
-    "bootstrap": "^4.1.3",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^21.0.1",
+    "ag-grid-community": "^21.0.1",
     "angular-split": "^3.0.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "rxjs": "~6.2.0",
