update boostrap for grid

--- a/dorg-catcher/client/angular.json
+++ b/dorg-catcher/client/angular.json
@@ -24,9 +24,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/@swimlane/ngx-datatable/release/themes/material.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/ag-grid-community/dist/styles/ag-grid.css",
+              "node_modules/ag-grid-community/dist/styles/ag-theme-balham.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
                         "../client/node_modules/jquery/dist/jquery.min.js",
