--- a/dorg-catcher/server/build.gradle
+++ b/dorg-catcher/server/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     profile "org.grails.profiles:angular"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
     runtime "com.h2database:h2"
+    runtime 'mysql:mysql-connector-java:5.1.29'
     runtime "org.apache.tomcat:tomcat-jdbc"
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.grails:grails-datastore-rest-client"
