--- a/dorg-catcher/client/angular.json
+++ b/dorg-catcher/client/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/ag-grid-community/dist/styles/ag-grid.css",
               "node_modules/ag-grid-community/dist/styles/ag-theme-balham.css",
               "node_modules/bootstrap/dist/css/bootstrap.css"
