--- a/dorg-catcher/client/package.json
+++ b/dorg-catcher/client/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
+    "ng-pick-datetime": "6.0.16",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
