--- a/dorg-catcher/server/build.gradle
+++ b/dorg-catcher/server/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     compile "org.hibernate:hibernate-core:5.1.16.Final"
     compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:views-json-templates"
+    compile 'com.vdurmont:emoji-java:3.1.3'
+    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
     console "org.grails:grails-console"
     profile "org.grails.profiles:angular"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
